--- a/page/style.css
+++ b/page/style.css
@@ -6,6 +6,9 @@ body{
     height: 100vh;
     font-size: 22px;
     text-align: center;
+    color: #E4E4E4;
+    background-color: #2C2C2C;
+    
 }
 .search > * {
     padding-bottom: 12px;
@@ -26,12 +29,16 @@ button{
     margin-top: 20px;
     width: 100%;
     display: grid;
-    grid-auto-rows: minmax(40px, auto);
+    grid-auto-rows: minmax(50px, auto);
     grid-template-columns: 100%;
+    box-shadow: 0 7px 37px -5px #00C4F0;
 }
 .headers{
+    background-color: #333333;
+    
     font-weight: bold;
-    font-size: 24px;
+    font-size: 25px;
+    text-shadow: 1px 1px 5px black;
 }
 .row{
     display: grid;
@@ -39,7 +46,7 @@ button{
     font-size: 20px;
 }
 .table .cell {
-    border: 1px solid black;
+    border: 1px solid #E4E4E4;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -47,6 +54,11 @@ button{
     flex-direction: column;
     padding: 5px;
 }
+.cell:hover{
+    text-shadow: 7px 5px 7px black;
+    box-shadow: inset 0px 5px 20px 2px rgb(20, 20, 20);
+}
+  
 @media (max-width: 420px) {
     body{
         height: auto;
