--- a/page/style.css
+++ b/page/style.css
@@ -7,7 +7,7 @@ body{
     font-size: 22px;
     text-align: center;
     color: #E4E4E4;
-    background-color: #2C2C2C;
+    background-color: #3d3d3d;
     
 }
 .search > * {
@@ -56,7 +56,7 @@ button{
 }
 .cell:hover{
     text-shadow: 7px 5px 7px black;
-    box-shadow: inset 0px 5px 20px 2px rgb(20, 20, 20);
+    box-shadow: inset 0px 5px 20px 2px black;
 }
   
 @media (max-width: 420px) {
